--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div id="app"></div>
-        <script src="bundle.js"></script>
+        <script src="/bundle.js"></script>
     </body>
 </html>
 
